# iot-smart-home

./: README.md  pyproject.toml  requirements-dev.txt
docs/: Hands on assignment 3.docx
scripts/: mqtt_publisher_client_hands_on_3.py  mqtt_subscriber_client_hands_on_3.py
scripts/GUI_Template/: cubes_gui_main_template.py  hands_on_six.py
scripts/base/: mqtt_test_driver.py  test_install.py
scripts/cubes_test/: BUTTON.py  DHT.py  RELAY.py  client.py  cubes_test.py  run_all.sh
src/iot_smart_home/: __init__.py  __main__.py
